# python-process

./: .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: publish.yml
docs/: api.md  index.md  requirements.txt
docs/examples/: capturing-outputs.md  complicated-scenario.md  running-command.md  sending-inputs.md
docs/extra/: stylesheet.css
process/: __init__.py  constants.py  process.py  types.py  utils.py
process/asyncio/: __init__.py  constants.py  process.py  types.py
process/core/: __init__.py  constants.py  errors.py  process.py  protocol.py  types.py
tests/: conftest.py  test_errors.py  test_process.py
tests/assets/: lorem-ipsum.txt
tests/asyncio/: test_errors.py  test_process.py
tests/utils/: cat.py  echo-error.py  echo.py  lazy-echo.py  sleep.py
